Slim PHP micro framework is up! Docker builds NGINX + PHP-FPM stack.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,25 @@
-version: '2'
-
-volumes:
-    logs:
-        driver: local
-
+version: "3"
+networks:
+  app-tier:
+    driver: bridge
 services:
-    slim:
-        image: php:7-alpine
-        working_dir: /var/www
-        command: php -S 0.0.0.0:8080 -t public
-        environment:
-            docker: "true"
-        ports:
-            - 8080:8080
-        volumes:
-            - .:/var/www
-            - logs:/var/www/logs
+  app:
+    build:
+      context: .
+      dockerfile: .docker/php/Dockerfile
+    networks:
+      - app-tier
+    ports:
+      - 9002:9000
+    volumes:
+      - .:/srv/app
+  nginx:
+    build:
+      context: .
+      dockerfile: .docker/nginx/Dockerfile
+    networks:
+      - app-tier
+    ports:
+      - 8080:80
+    volumes:
+      - ./public:/srv/app/public
