--- a/.docker/nginx/Dockerfile
+++ b/.docker/nginx/Dockerfile
@@ -9,4 +9,4 @@ RUN rm /etc/nginx/conf.d/default.conf
 #  the main nginx.conf and all files located in conf.d/ that end in .conf.
 COPY .docker/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY .docker/nginx/conf.d/*.conf /etc/nginx/conf.d/
-COPY . /srv/app/
+COPY public/ /srv/app/public
