--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -26,7 +26,25 @@ http {
 
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
+    gzip_disable "msie6";
+    gzip_min_length 256;
+    gzip_types
+        text/plain
+        text/css
+        application/json
+        application/x-javascript
+        application/javascript
+        text/xml
+        application/xml
+        application/xml+rss
+        text/javascript
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        font/opentype
+        image/svg+xml
+        image/x-icon
+    ;
 
     include /etc/nginx/conf.d/*.conf;
 }
